--- a/PersonalDIary/res/values/strings.xml
+++ b/PersonalDIary/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+     <string name="action_settings">Settings</string>
     <string name="app_name">PersonalDiary</string>
     <string name="titleLabel">TITLE:</string>
     <string name="bodyLabel">BODY:</string>
@@ -7,6 +8,10 @@
 	<string name="addImageButtonText">Add Image</string>
 	<string name="addVideoLabel">ADD VIDEO:</string>
 	<string name="addVideoButtonText">Add Video</string>
+	<string name="location">LOCATION:</string>
+	<string name="addLocationButtonText">Add Location</string>
+	<string name="lattitude">LATTITUDE:</string>
+	<string name="longitutde">LONGITUDE:</string>
 	<string name="createStoryButtonText">CREATE</string>
 	<string name="cancelStoryButtonText">CANCEL</string>
 	<string name="clearStoryButtonText">CLEAR</string>
